Enhance project structure by adding repositories for current and hourly usage data, updating EnergyController to fetch data from these repositories, and refining the EnergyProducer and EnergyUser services with improved scheduling and data generation logic. Update .gitignore and README for better clarity and project management.